# Dendrite

./: CMakeLists.txt  README.org
inc/: CMakeLists.txt  Image.hpp
inc/utils/: CMakeLists.txt  printers.hpp
src/: CMakeLists.txt  Image.cpp  main.cpp
